--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Praktek",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "runSaucedemo": "npx cypress run --spec cypress/e2e/web-test/saucedemo.cy.js",
+    "run_test": "npx cypress run --spec cypress/e2e/web-test/*.cy.js"    
   },
   "repository": {
     "type": "git",
